unpackaged/main/default/objects/Gifts__c/Gifts__c.object-meta.xml
<CustomObject>
    <label>Gifts</label>
    <nameField>
        <label>Gifts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gifts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>