unpackaged/main/default/objects/Gifts__c/fields/Date_of_Gift_Start__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Gift_Start__c</fullName>
    <label>Date of Gift / Start</label>
    <type>Date</type>
</CustomField>