unpackaged/main/default/objects/Gifts__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Only required for recurring gifts</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>