unpackaged/main/default/objects/Gifts__c/fields/Giver__c.field-meta.xml
<CustomField>
    <fullName>Giver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Giver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gifts (Giver)</relationshipLabel>
    <relationshipName>Gifts1</relationshipName>
    <type>Lookup</type>
</CustomField>