unpackaged/main/default/objects/Gifts__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <label>Household</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The account selected in the household field must be a household. 

(Admin message: lookup filter criteria not met on Household on the gifts object)</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>IndustriesHousehold</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gifts</relationshipLabel>
    <relationshipName>Gifts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>